--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,15 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-*~
-*.sw[mnpcod]
-.tmp
-*.tmp
-*.tmp.*
-UserInterfaceState.xcuserstate
-$RECYCLE.BIN/
-
-*.log
-log.txt
-
-
-/.sourcemaps
-/.versions
-/coverage
-
-# Ionic
-/.ionic
-/www
-/platforms
-/plugins
-
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+# Compiled source
+*.js
+*.js.map
+*.d.ts
+!karma.conf.js
+!protractor.conf.js
+!e2e/**/*.js
 
 # Node
-/node_modules
+node_modules/
 npm-debug.log
 yarn-error.log
 
@@ -41,10 +20,7 @@ yarn-error.log
 .c9/
 *.launch
 .settings/
-*.sublime-project
 *.sublime-workspace
-
-# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -52,24 +28,30 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # Miscellaneous
-/.angular
-/.angular/cache
-.sass-cache/
-/.nx
-/.nx/cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
 .DS_Store
 Thumbs.db
 
-# Environment files with sensitive data (API keys)
+# Capacitor
+.capacitor
+
+# Environment files with API keys
 .env
-src/environments/environment.ts
-src/environments/environment.prod.ts
+.env.local
+.env.*.local
+
+# Build output
+www/
+dist/
+.angular/
+
+# Logs
+logs
+*.log
